# General-harness

./: .gitignore  Cargo.toml  I4.5_FINAL_CERTIFICATION_REPORT.md  I4.5_INDEPENDENT_CERTIFICATION_TASK.md  README.md  harness-design-report.md  ready.json
.github/workflows/: ci.yml
crates/harness-adapters/: Cargo.toml  hello.txt
crates/harness-adapters/src/: contract_test.rs  lib.rs
crates/harness-adapters/src/claude/: mod.rs
crates/harness-adapters/src/codex/: mod.rs
crates/harness-adapters/src/fake/: adapter.rs  mod.rs  reviewer.rs  script.rs
crates/harness-adapters/tests/: adapter_integration_tests.rs  golden_path_minimal.rs
crates/harness-cli/: Cargo.toml
crates/harness-cli/src/: main.rs
crates/harness-cli/src/commands/: integration.rs  mod.rs  review.rs  task_loop.rs
crates/harness-cli/tests/: cli_binary_e2e_tests.rs  cli_integration_tests.rs
crates/harness-core/: Cargo.toml
crates/harness-core/src/: error.rs  lib.rs
crates/harness-core/src/contracts/: agent_adapter.rs  agent_definition.rs  agent_event.rs  agent_identity.rs  candidate.rs  commit.rs  discovery.rs  goal_contract.rs  integration.rs  mod.rs  project.rs  repository.rs  review.rs  runtime_profile.rs  scheduler.rs  task.rs  task_envelope.rs  task_result.rs  verification.rs  workspace.rs
crates/harness-core/src/policies/: budget.rs  command.rs  file_scope.rs  mod.rs
crates/harness-core/src/resource_claim/: engine.rs  mod.rs  normalize.rs  spec.rs  types.rs
crates/harness-core/src/state_machine/: commit_fsm.rs  execution_fsm.rs  integration_fsm.rs  lease_fsm.rs  mod.rs  project_fsm.rs  review_fsm.rs  task_fsm.rs
crates/harness-core/tests/: snapshot_wire_format.rs
crates/harness-runtime/: Cargo.toml
crates/harness-runtime/migrations/: 001_initial_schema.sql  002_idempotency_ownership.sql  003_operation_claim.sql  004_worktrees.sql  005_workspace_lease_v2.sql  006_policy_evidence.sql  007_policy_approvals.sql  008_resource_claim_groups.sql  009_agent_discovery.sql  010_scheduler.sql  011_resource_handoff.sql  012_verification.sql  013_verification_operations.sql  014_verification_events.sql  015_verification_approvals.sql  016_verification_policy_operations.sql  017_verification_finalization.sql  018_verification_reconciliation.sql  019_verification_release_steps.sql  020_idempotency_fencing.sql  021_task_engineering_loop.sql  022_context_pack_idempotency.sql  023_candidate_review_gate.sql  024_controlled_commit.sql  025_integration_queue.sql
crates/harness-runtime/src/: artifact.rs  db.rs  event_log.rs  idempotency.rs  lib.rs  operation.rs  production_graph.rs  repo.rs  transition.rs
crates/harness-runtime/src/commit/: mod.rs  repo.rs  service.rs
crates/harness-runtime/src/discovery/: known_agents.rs  mod.rs  repo.rs
crates/harness-runtime/src/integration/: executor.rs  mod.rs  recovery.rs  repo.rs  service.rs
crates/harness-runtime/src/lease/: access_validator.rs  clock.rs  guard.rs  mod.rs  reconciler.rs  runner.rs  service.rs  transition.rs  types.rs
crates/harness-runtime/src/liveness/: cargo_target.rs  evidence_dir.rs  guard.rs  mod.rs  orchestrator.rs  run_context.rs  temp_dir.rs  types.rs
crates/harness-runtime/src/policy/: command.rs  diff.rs  evidence.rs  file_scope.rs  mod.rs  reconciler.rs  scanner.rs  service.rs
crates/harness-runtime/src/process/: capture.rs  job_object.rs  manager.rs  mod.rs  reconciler.rs  redactor.rs  registry.rs  types.rs
crates/harness-runtime/src/resource_claim/: adapter.rs  lease_adapter.rs  mod.rs  reconciler.rs  repo.rs  service.rs
crates/harness-runtime/src/review/: mod.rs  repo.rs  service.rs
crates/harness-runtime/src/scheduler/: composition.rs  concurrency.rs  dispatch.rs  dispatch_repo.rs  event_sink.rs  handoff_coordinator.rs  handoff_repo.rs  heartbeat_registry.rs  mod.rs  profile_selector.rs  readiness.rs  reconciler.rs
crates/harness-runtime/src/task_loop/: decision.rs  events.rs  faults.rs  gateway.rs  mod.rs  progress.rs  reconciler.rs  repo.rs  service.rs  types.rs
crates/harness-runtime/src/verification/: approval_validator.rs  content_validator.rs  evidence_repo.rs  execution_service.rs  finalization.rs  mod.rs  ownership_service.rs  plan_repo.rs  policy_evidence.rs  reconciler.rs  release_steps.rs  run_repo.rs
crates/harness-runtime/src/worktree/: git.rs  git_verifier.rs  inspector.rs  lock.rs  manager.rs  metadata.rs  mod.rs  naming.rs  reconciler.rs  types.rs
crates/harness-runtime/tests/: agent_discovery_tests.rs  env_boundary_tests.rs  i4_5_certification_manifest.rs  i4_6_real_reviewer_smoke.rs  i4_6_review_smoke.rs  i5_1_controlled_commit.rs  i5_2_integration_queue.rs  i5_3_integration_e2e.rs  liveness_cross_process.rs  liveness_e2e_evidence.rs  persistence_closure.rs  process_capture.rs  process_integration.rs  real_i4_e2e_tests.rs  resource_claim_closure.rs  resource_claim_integration.rs  resource_claim_persistence.rs  running_agent_cancellation.rs  scheduler_orchestrator_tests.rs  task_engineering_loop.rs  task_loop_fault_tests.rs  task_loop_i4_integration.rs  verification_finalization_recovery.rs  verification_policy_real_git.rs  verification_reconciliation_recovery.rs  workspace_diff.rs  workspace_lease.rs  workspace_policy.rs  worktree_manager.rs
docs/architecture/: adapter-contract.md  agent-discovery.md  cli-architecture.md  container-and-module-design.md  dependency-rules.md  event-model.md  git-workspace-model.md  i4-5-boundaries.md  i4-5-budget-and-usage.md  i4-5-decision-table.md  i4-5-state-machine.md  i4-5-task-engineering-loop.md  integration-queue.md  process-ownership-model.md  recovery-model.md  resource-claim-model.md  runtime-profile-model.md  security-boundaries.md  state-machines.md  system-context.md
docs/handoff/: i2a-process-kernel-handoff.md  i2b-workspace-kernel-final.md  i2b-workspace-kernel-handoff.md  i3-resource-claim-final.md  i4-a-agent-runtime-handoff.md  i4-b-scheduler-handoff.md
scripts/: cleanup-harness-artifacts.ps1  run-certification-scaled.ps1  run-i4-5-certification.ps1  run-with-managed-temp.ps1
verification/: I4.6_FINAL_REPORT.md  I5_FINAL_REPORT.md
(+41 files in other folders)
