[workspace]
resolver = "2"
members = [
    "crates/harness-core",
    "crates/harness-runtime",
    "crates/harness-adapters",
    "crates/harness-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.80"

[workspace.lints.rust]
unsafe_code = "deny"

# NOTE: clippy::all is the enforced baseline (gate: `cargo clippy --workspace
# --all-targets -- -D warnings`). pedantic/unwrap_used were previously listed
# here but never inherited by any crate (dead config); enabling them now would
# require blanket allows across the codebase — deferred as an explicit
# decision rather than silently re-added.
[workspace.lints.clippy]
all = "warn"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
