[package]
name = "harness-adapters"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
harness-core = { path = "../harness-core" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "v7"] }
thiserror = "2"
tracing = "0.1"
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"
