[package]
name = "harness-cli"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
harness-core = { path = "../harness-core" }
harness-runtime = { path = "../harness-runtime" }
harness-adapters = { path = "../harness-adapters" }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "uuid"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ratatui = "0.28"
crossterm = "0.28"
