[package]
name = "harness-core"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "v7", "serde"] }
thiserror = "2"
async-trait = "0.1"
sha2 = "0.10"
hex = "0.4"
unicode-normalization = "0.1"
