[package]
name = "harness-runtime"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
harness-core = { path = "../harness-core" }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "uuid", "migrate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "v7"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
async-trait = "0.1"
unicode-normalization = "0.1"
regex = "1"
log = "0.4"

[target.'cfg(windows)'.dependencies]
# Already in the dependency tree transitively (tokio/sqlx); direct use for the
# isolated Job Object FFI module only. No new crates enter the lock file.
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_JobObjects",
] }

[dev-dependencies]
tempfile = "3"
